--- a/Parstagram/Base.lproj/Main.storyboard
+++ b/Parstagram/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -143,13 +143,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ew0-mh-bnK">
-                                                    <rect key="frame" x="23" y="343" width="45" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="23" y="343" width="48" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vpc-bj-2ga">
-                                                    <rect key="frame" x="76" y="343" width="59.5" height="20.5"/>
+                                                    <rect key="frame" x="79" y="343" width="59.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -173,6 +173,41 @@
                                             <outlet property="usernameLabel" destination="ew0-mh-bnK" id="GzQ-sk-i9R"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" id="p8y-rX-AoJ" customClass="CommentCell" customModule="Parstagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="400" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="p8y-rX-AoJ" id="yyM-a9-9uK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MA2-0s-kCg">
+                                                    <rect key="frame" x="23" y="8" width="48" height="28"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comment" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26t-b2-fES">
+                                                    <rect key="frame" x="79" y="8" width="75" height="28"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="26t-b2-fES" firstAttribute="top" secondItem="yyM-a9-9uK" secondAttribute="top" constant="8" id="0FS-dw-amt"/>
+                                                <constraint firstItem="MA2-0s-kCg" firstAttribute="top" secondItem="yyM-a9-9uK" secondAttribute="top" constant="8" id="20b-2y-LhW"/>
+                                                <constraint firstItem="26t-b2-fES" firstAttribute="leading" secondItem="MA2-0s-kCg" secondAttribute="trailing" constant="8" id="Igr-cr-5oY"/>
+                                                <constraint firstAttribute="bottom" secondItem="MA2-0s-kCg" secondAttribute="bottom" constant="8" id="cP7-6z-GCZ"/>
+                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="26t-b2-fES" secondAttribute="trailing" constant="8" id="egv-VX-nJR"/>
+                                                <constraint firstAttribute="bottom" secondItem="26t-b2-fES" secondAttribute="bottom" constant="8" id="r9L-dS-Mj8"/>
+                                                <constraint firstItem="MA2-0s-kCg" firstAttribute="leading" secondItem="yyM-a9-9uK" secondAttribute="leading" constant="23" id="t8E-c4-NUS"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="26t-b2-fES" id="dxc-51-P3D"/>
+                                            <outlet property="nameLabel" destination="MA2-0s-kCg" id="bM7-3G-Yjn"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -180,6 +215,11 @@
                         <viewLayoutGuide key="safeArea" id="6XS-OE-ncm"/>
                     </view>
                     <navigationItem key="navigationItem" id="pod-lF-80E">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="Ac8-OA-fgk">
+                            <connections>
+                                <action selector="onLogoutButton:" destination="sPF-I7-bU3" id="qRI-rm-aKr"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="insta_camera_btn" id="H7n-XN-KYl">
                             <connections>
                                 <segue destination="Mm5-cq-opt" kind="presentation" id="mRj-L3-K4P"/>
@@ -262,7 +302,7 @@
         <!--Navigation Controller-->
         <scene sceneID="HEF-MG-VVZ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="hEy-xu-C6H" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="FeedNavigationController" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="hEy-xu-C6H" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Lc-fv-Lf9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
